test/scc_test/stmt/semantic-errors/018.a
018.t:6:15: error: expression must have integral type